[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Enemies/Ghost.gd" type="Script" id=1]
[ext_resource path="res://src/Images/Enemy/Ghost.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 3 )

[sub_resource type="CircleShape2D" id=2]
radius = 57.8705

[node name="Ghost" type="Area2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="Range" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Trigger" type="CollisionShape2D" parent="Range"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true
[connection signal="area_shape_entered" from="Range" to="." method="_on_Range_area_shape_entered"]
[connection signal="area_shape_exited" from="Range" to="." method="_on_Range_area_shape_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
